--- a/_locale/eo/033-ebligi-komentojn.md.po
+++ b/_locale/eo/033-ebligi-komentojn.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-04-09 19:09+0200\n"
+"POT-Creation-Date: 2021-11-11 13:13+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,54 +59,53 @@ msgid "Au niveau du site"
 msgstr "Ĉe la retejo"
 
 #. type: Bullet: ' * '
-#: 033-ebligi-komentojn.md:15
-#, fuzzy, no-wrap
-msgid "renseigner _gh\\_uzanto_ dans _\\_config.yml_ avec votre nom d'utilisateur github.\n"
-msgstr "Trovu _gh\\_uzanto_ en _\\_config.yml_ kun via GitHub-salutnomo.\n"
+#: 033-ebligi-komentojn.md:16
+#, fuzzy
+msgid ""
+"pour un site _github page_ : renseigner _gh\\_uzanto_ dans _\\_config.yml_ "
+"avec votre nom d'utilisateur github.\n"
+msgstr ""
+"Por  _github page_  retejo: Plenigu  _gh\\_uzanto_  en  _\\_config.yml_  kun "
+"via GitHub-salutnomo. \n"
+
+#. type: Bullet: ' * '
+#: 033-ebligi-komentojn.md:16
+#, fuzzy
+msgid ""
+"pour un sous-site _github page_ : renseigner _gh\\_uzanto_ dans _\\_config."
+"yml_ avec votre nom d'utilisateur github suivi du sous-site, par exemple "
+"«utilisateur/mon site».\n"
+msgstr ""
+"Por subsite  _github page_ : Plenigu  _gh\\_uzanto_  en  _\\_config.yml_  "
+"kun via GitHub-salutnomo sekvata de la subsite, ekzemple \"Uzanto / Mia "
+"retejo\". \n"
 
 #. type: Title #
-#: 033-ebligi-komentojn.md:16
+#: 033-ebligi-komentojn.md:17
 #, fuzzy, no-wrap
 msgid "Pour le post ou la page"
 msgstr "Por la afiŝo aŭ paĝo"
 
 #. type: Bullet: ' * '
-#: 033-ebligi-komentojn.md:18
+#: 033-ebligi-komentojn.md:19
 #, fuzzy, no-wrap
 msgid "créer une _«issue»_ dans le dépôt correspondant au site, noter son numéro.\n"
 msgstr "Krei _«issue»_ en la deponejo responda al la retejo, rimarku ĝian numeron.\n"
 
 #. type: Bullet: ' * '
-#: 033-ebligi-komentojn.md:19
+#: 033-ebligi-komentojn.md:20
 #, fuzzy, no-wrap
 msgid "ajouter dans l'en-tête _YAML_ du post ou de la page :  \n"
 msgstr "Aldoni al afiŝo aŭ paĝo Header _YAML_ :  \n"
 
 #. type: Fenced code block
-#: 033-ebligi-komentojn.md:21
+#: 033-ebligi-komentojn.md:22
 #, no-wrap
 msgid "komentoj_id: #\n"
 msgstr "komentoj_id: #\n"
 
 #. type: Plain text
-#: 033-ebligi-komentojn.md:24
-#, no-wrap
-#, fuzzy
+#: 033-ebligi-komentojn.md:25
+#, fuzzy, no-wrap
 msgid "(remplacez _#_ par le numéro noté précédemment)\n"
 msgstr "(Anstataŭigi _#_ kun la numero konata antaŭe)\n"
-
-#, fuzzy, no-wrap
-#~ msgid "(remplacez _#_ par le numéro de l'issue)\n"
-#~ msgstr "(Anstataŭigi _#_ kun la numero de numero)\n"
-
-#, fuzzy, no-wrap
-#~ msgid "créer une issue dans le dépôt correspondant au site, noter son numéro.\n"
-#~ msgstr "Krei eliron en la responda deponejo al la retejo, rimarku ĝian numeron.\n"
-
-#, fuzzy, no-wrap
-#~ msgid "( en remplaçant # par le numéro de l'issue)\n"
-#~ msgstr "( per anstataŭigo de numero de la numero 2 ° 2 °\n"
-
-#, fuzzy
-#~ msgid "5"
-#~ msgstr "5"
